Fix alignment and mobile first issues

--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -8,6 +8,7 @@
   position: fixed;
   right: 0;
   top: 0;
+  transition: .3s;
 }
 
 .headerMenuVisible {
