--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -5,6 +5,7 @@
     justify-content: flex-start;
     padding: 10px;
     width: 100%;
+    font-family: proximanova;
 }
 
 .navigationVisible {
@@ -24,7 +25,7 @@
     color: #ffffff;
     text-align: start;
     font-size: 14px;
-    font-family: ProximaNova-Semibold;
+    font-family: proximanova;
     text-decoration: none;
     margin-top: 24px;
     margin-left: 12px;
