--- a/src/components/time-entries/TimeEntries.module.css
+++ b/src/components/time-entries/TimeEntries.module.css
@@ -3,11 +3,15 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-content: center;
     margin-top: 67px;
+    width: 100%;
 }
 
 @media (min-width: 901px){ 
 .TimeEntries {
+    align-items: center;
     max-width: 1170px;
+    width: 100%;
 }
 }
