--- a/src/components/time-entry/TimeEntry.module.css
+++ b/src/components/time-entry/TimeEntry.module.css
@@ -7,18 +7,19 @@
     display:flex;
     justify-content: space-between;
     width: 100%;
+    font-family: proximanova;
 }
 
 .Task {
     padding: 32px 16px;
-    font-style: ProximaNova-Semibold;
+    font-family: proximanova;
     font-size: 16px;
     color: #354052;
 }
 
 .TimeStamp {
     padding: 32px 16px;
-    font-style: ProximaNova-Semibold;
+    font-family: proximanova;
     font-size: 16px;
     color: #354052;
 
